--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       - redis-net
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:6379
 
   redis-insight:
     image: redislabs/redisinsight:latest
@@ -17,7 +17,7 @@ services:
     networks:
       - redis-net
     ports:
-      - 8001:8001
+      - ${INSIGHT_PORT}:8001
 
 volumes:
   redis-vol:
