Update - redis password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.3'
 services:
   redis:
     image: redis
+    command: redis --requirepass ${REDIS_PASSWORD}
     container_name: redis
     networks:
       - redis-net
