Update - add TIMEZONE to default.env

--- a/default.env
+++ b/default.env
@@ -1,3 +1,9 @@
+# Redis DB Configuration
 REDIS_PORT=6379
 REDIS_PASSWORD=password
+
+# Redis Insight Configuration
 INSIGHT_PORT=8001
+
+# Environment
+TIMEZONE="Asia/Bangkok"
