--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ version: '3.3'
 
 services:
   redis:
+    build: 
+      context: .
+      args: 
+        - conf=./redis.conf
+      dockerfile: Dockerfile
     image: redis
     command: redis-server --requirepass ${REDIS_PASSWORD}
     container_name: redis
@@ -9,6 +14,8 @@ services:
       - net
     ports:
       - ${REDIS_PORT}:6379
+    environment: 
+      - TZ=${TIMEZONE}
     restart: always
 
   redis-insight:
@@ -20,6 +27,8 @@ services:
       - net
     ports:
       - ${INSIGHT_PORT}:8001
+    environment: 
+      - TZ=${TIMEZONE}
     depends_on: 
       - redis
     restart: always
