Compose - update compose file without using Dockerfile

--- a/default.env
+++ b/default.env
@@ -1,8 +1,10 @@
 # Redis DB Configuration
+REDIS_VERISON=6.2.5
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 
 # Redis Insight Configuration
+INSIGHT_VERSION=latest
 INSIGHT_PORT=8001
 
 # Environment
