--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,32 @@
-version: '3.3'
+version: "3.8"
 
 services:
   redis:
-    build: 
-      context: .
-      args: 
-        - conf=./redis.conf
-      dockerfile: Dockerfile
-    image: redis
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    image: redis:${REDIS_VERISON:-6.2.5}
+    command: redis-server --requirepass ${REDIS_PASSWORD:-password}
     container_name: redis
+    volumes:
+      - ./redis.conf:/etc/redis/redis.conf.default
     networks:
       - net
     ports:
-      - ${REDIS_PORT}:6379
-    environment: 
-      - TZ=${TIMEZONE}
+      - ${REDIS_PORT:-6379}:6379
+    environment:
+      TZ: ${TIMEZONE:-"Asia/Bangkok"}
     restart: always
 
   redis-insight:
-    image: redislabs/redisinsight:latest
+    image: redislabs/redisinsight:${INSIGHT_VERSION:-latest}
     container_name: redis-insight
     volumes:
       - vol:/db
     networks:
       - net
     ports:
-      - ${INSIGHT_PORT}:8001
-    environment: 
-      - TZ=${TIMEZONE}
-    depends_on: 
+      - ${INSIGHT_PORT:-8001}:8001
+    environment:
+      TZ: ${TIMEZONE:-"Asia/Bangkok"}
+    depends_on:
       - redis
     restart: always
 
