--- a/default.env
+++ b/default.env
@@ -1,10 +1,10 @@
 # Redis DB Configuration
-REDIS_VERISON=6.2.5
+REDIS_VERSION=7.0.4
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 
 # Redis Insight Configuration
-INSIGHT_VERSION=latest
+INSIGHT_VERSION=1.12.0
 INSIGHT_PORT=8001
 
 # Environment
