--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,14 @@ version: "3.8"
 
 services:
   redis:
-    image: redis:${REDIS_VERISON:-6.2.5}
-    command: redis-server --requirepass ${REDIS_PASSWORD:-password}
+    image: redis:${REDIS_VERSION:-7.0.4}
     container_name: redis
+    command: redis-server --requirepass ${REDIS_PASSWORD:-password} /usr/local/etc/redis/redis.conf
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 5s
+      timeout: 30s
+      retries: 3
     volumes:
       - ./redis.conf:/etc/redis/redis.conf.default
       - redis_data:/data
@@ -14,10 +19,10 @@ services:
       - ${REDIS_PORT:-6379}:6379
     environment:
       TZ: ${TIMEZONE:-"Asia/Bangkok"}
-    restart: always
+    restart: on-failure
 
   redis-insight:
-    image: redislabs/redisinsight:${INSIGHT_VERSION:-latest}
+    image: redislabs/redisinsight:${INSIGHT_VERSION:-1.12.1}
     container_name: redis-insight
     volumes:
       - insight_data:/db
