--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   redis:
     image: redis:${REDIS_VERSION:-7.0.4}
     container_name: redis
-    command: redis-server --requirepass ${REDIS_PASSWORD:-password} /usr/local/etc/redis/redis.conf
+    command: redis-server --requirepass ${REDIS_PASSWORD:-password}
     healthcheck:
       test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
       interval: 5s
