--- a/default.env
+++ b/default.env
@@ -2,6 +2,7 @@
 REDIS_VERSION=7.0.4
 REDIS_PORT=6379
 REDIS_PASSWORD=password
+REDIS_MEMORY=500mb
 
 # Redis Insight Configuration
 INSIGHT_VERSION=1.13.0
