--- a/redis.conf
+++ b/redis.conf
@@ -857,7 +857,7 @@ requirepass ${REDIS_PASSWORD}
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory {REDIS_MEMORY}
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -889,6 +889,7 @@ requirepass ${REDIS_PASSWORD}
 # The default is:
 #
 # maxmemory-policy noeviction
+maxmemory-policy allkeys-lru
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
