--- a/redis-stack/default.env
+++ b/redis-stack/default.env
@@ -1,12 +1,8 @@
-# Redis DB Configuration
+# Redis Stack Configuration
 REDIS_VERSION=7.0.6-RC3
 REDIS_PORT=6379
+REDIS_INSIGHT_PORT=8001
 REDIS_PASSWORD=password
-REDIS_MEMORY=5mb
-
-# Redis Insight Configuration
-INSIGHT_VERSION=1.13.1
-INSIGHT_PORT=8001
 
 # Environment
 TIMEZONE="Asia/Bangkok"
